# IMU_SEN0386

./: README.md  imu_calibration.db
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/imu_serial_node/share/imu_serial_node/: package.dsv  package.sh
log/: latest_build
src/imu_serial_node/: package.xml  setup.cfg  setup.py  setup.py.save
src/imu_serial_node/config/: imu_params.yaml
src/imu_serial_node/docs/: industrial_documentation_structure
src/imu_serial_node/imu_serial_node/: imu_node.py
src/imu_serial_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/imu_serial_node/install/imu_serial_node/lib/imu_serial_node/: imu_node
src/imu_serial_node/install/imu_serial_node/share/imu_serial_node/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/imu_serial_node/install/imu_serial_node/share/imu_serial_node/launch/: imu_multi.launch.py
src/imu_serial_node/launch /: imu_multi.launch.py
src/imu_serial_node/log/: latest_build
