<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_serial_node</name>
  <version>1.0.0</version>
  <description>ROS2 driver for DFRobot Serial 6-Axis IMU (SEN0386) with automatic USB port detection.</description>

  <maintainer email="nehatonge30@gmail.com">Neha Tonge</maintainer>
  <license>All rights reserved</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- System dependency (for pyserial) -->
  <exec_depend>python3-serial</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
